--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "chromadb>=1.0.20",
     "dotenv>=0.9.9",
     "faiss-cpu>=1.12.0",
     "langchain>=0.3.27",
+    "langchain-chroma>=0.2.5",
     "langchain-community>=0.3.29",
     "langchain-ollama>=0.3.7",
     "langchain-openai>=0.3.32",
     "pypdf>=6.0.0",
+    "rich>=14.1.0",
 ]
