--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langchain-ollama>=0.3.7",
     "langchain-openai>=0.3.32",
     "langgraph>=0.6.6",
+    "neo4j>=5.28.2",
     "pillow>=11.3.0",
     "pinecone>=7.3.0",
     "pinecone-client>=6.0.0",
